<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">P_kids</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">P_kids</string>
    <string name="nav_header_subtitle">Bienvenue sur votre application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--SingIn-->
    <string name="messageerreur" />
    <string name="messagesucces" />
    <!-- menu -->
    <string name="Dashboard">Dashboard</string>
    <string name="Notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="Activités">Activités</string>
    <string name="Ajouter_Enfant">+ Ajouter Enfant</string>

    <!--champs Inscrire-->
    <string name="Nom">Nom</string>
    <string name="Adresse_Email">Adresse_Email</string>
    <string name="Prenom">Prenom</string>
    <string name="Inscrire">S\'Inscrire</string>
    <string name="Mot_de_passe">Mot_de_passe</string>
    <string name="Identifier">S\'identifier</string>

    <string name="langue">Langue</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="Envoyer">Envoyer</string>

    <!--Forget password-->
    <string name="oublier">Mot de passe oublier ?</string>
    <string name="afficher">Afficher</string>
    <string name="paragraphe">Veuillez remplir les information ci_dessus,len informations de votre enfant sera sauvegarder</string>
    <string name="age">age</string>
    <string name="inserer">Insérer</string>
    <string name="normal_map">normal_map</string>
    <string name="hybrid_map">hybrid_map</string>
    <string name="satellite_map">satellite_map</string>
    <string name="terrain_map">terrain_map</string>

    <string-array name="language_option">
        <item>English</item>
        <item>Indonesian</item>
        <item>Spanish</item>
    </string-array>
</resources>

