<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Inscrire">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:layout_gravity="center"
        android:text="@string/paragraphe"
        android:textSize="20dp"
        android:layout_marginTop="100dp" />


    <EditText
        android:id="@+id/inserer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:layout_gravity="center"
        android:hint="@string/Nom"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp" />


    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:layout_gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_marginTop="@dimen/activity_vertical_margin" />


    <Button
        android:id="@id/inserer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:text="@string/inserer"
        android:textColor="#FFFF"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:layout_marginTop="55dp" />
    <Button
        android:id="@+id/afficher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:text="@string/afficher"
        android:textColor="#FFFF"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:layout_marginTop="55dp" />


</androidx.appcompat.widget.LinearLayoutCompat>